# mcsmp-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  fuzz.yml  security.yml
docs/: api-guide.md  architecture.md  error-handling.md  protocol-compatibility.md  roadmap.md  server-configuration.md  testing.md
examples/: basic.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: jsonrpc_inbound.rs
src/: auth.rs  client.rs  compatibility.rs  connection.rs  discovery.rs  error.rs  event.rs  lib.rs  raw.rs  reconnect.rs  runtime.rs
src/api/: allowlist.rs  bans.rs  gamerules.rs  ip_bans.rs  mod.rs  operators.rs  players.rs  raw.rs  server.rs  server_settings.rs
src/capability/: discover.rs  mod.rs  schema.rs
src/client/: config.rs  mod.rs  state.rs
src/events/: decode.rs  mod.rs  normalize.rs  stream.rs
src/model/: ban.rs  gamerule.rs  message.rs  mod.rs  player.rs  server.rs  settings.rs
src/transport/: jsonrpc.rs  mod.rs  reconnect.rs  request.rs  session.rs  websocket.rs
tests/: api_resources.rs  capabilities.rs  events.rs  gamerule_models.rs  gamerules.rs  milestone_four.rs  milestone_three.rs  model_fixtures.rs  models.rs  reconnect.rs  server_settings.rs  transport.rs  typed_api.rs
tests/fixtures/: message_with_fallback.json  server_status.json
tests/fixtures/discovery/: malformed.json  v3.json
tests/fixtures/jsonrpc/: malformed_response.json  success.json
tests/fixtures/model/: bans.json  gamerules.json
tests/fixtures/notifications/: current_prefix.json  legacy_prefix.json  world_upgrade.json
tests/support/: assertions.rs  mod.rs  websocket_server.rs
