[package]
name = "mcsmp-rs-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
mcsmp-rs = { path = "..", features = ["fuzzing"] }

[[bin]]
name = "jsonrpc_inbound"
path = "fuzz_targets/jsonrpc_inbound.rs"
test = false
doc = false
bench = false
